--- a/Webapp/StingApp/src/app/floor/floor.component.html
+++ b/Webapp/StingApp/src/app/floor/floor.component.html
@@ -1,7 +1,7 @@
 <h1>Rooms</h1>
  
-<ul>
-  <li *ngFor="let b of bData$">
+<div>
+  <div *ngFor="let b of bData$">
     <a routerLink="room/{{b.id}}">Room {{b.id}}</a>
-  </li>
-</ul>
+  </div>
+</div>
