Es funktioniert! OMG! Sogar das Icon geht jetzt!

--- a/Webapp/StingApp/src/app/floor/floor.component.html
+++ b/Webapp/StingApp/src/app/floor/floor.component.html
@@ -2,6 +2,6 @@
  
 <div>
   <div *ngFor="let b of bData$">
-    <a routerLink="room/{{b.id}}">Room {{b.id}}</a>
+    <a routerLink="room/{{b.id}}"><strong>Room {{b.id}}</strong></a>
   </div>
 </div>
