--- a/Webapp/StingApp/src/app/room/room.component.html
+++ b/Webapp/StingApp/src/app/room/room.component.html
@@ -1,8 +1,8 @@
-<h1>Welcome to room {{ room$.id }}</h1>
+<h1>Welcome to room {{ bData$["room-id"].valueOf() }}</h1>
 
 <ul>
   <li>
-    <div>
+    <div id="content">
       <strong>Temperatur:</strong> {{ room$.email }} 
       <strong>Luftfeuchtigkeit:</strong> {{ room$.website }}
     </div>
