--- a/Webapp/StingApp/src/app/telemetry-data/telemetry-data.component.html
+++ b/Webapp/StingApp/src/app/telemetry-data/telemetry-data.component.html
@@ -3,8 +3,8 @@
 <div>
   <div id="outer" *ngFor="let b of bData$">
     <div id="image">
-      <img [src]="b.link" alt="image" />
+      <img [src]="b.link" alt="image" routerLink="building/{{b.id}}" width=500px height=250px />
     </div>
-    <a routerLink="building/{{b.id}}">{{ b.name }}</a> 
+    <a id="bottom-left" routerLink="building/{{b.id}}"><strong>{{ b.name }}</strong></a> 
   </div>
 </div>
