--- a/Webapp/StingApp/src/app/building/building.component.html
+++ b/Webapp/StingApp/src/app/building/building.component.html
@@ -3,8 +3,8 @@
 <div>
   <div id="outer" *ngFor="let b of bData$">
     <div id="image">
-      <img [src]="b.link" alt="image" />
+      <img [src]="b.link" alt="image" routerLink="floor/{{b.id}}" width=500px height=250px/>
     </div>
-    <a routerLink="floor/{{b.id}}">Floor {{b.id}}</a>
+    <a routerLink="floor/{{b.id}}"><strong>Floor {{b.id}}</strong></a>
   </div>
 </div>
