Data is now read properly

--- a/StingApp/src/app/telemetry-data/telemetry-data.component.html
+++ b/StingApp/src/app/telemetry-data/telemetry-data.component.html
@@ -3,6 +3,9 @@
   <li> 
     <p  > Temperature: {{ jsonObject.Temperature }} </p> 
     <p> Humidity: {{jsonObject.Humidity}}</p>
-    <p> Device: {{jsonObject.iothub-connection-device-id}}</p>
+    <p> Device: {{jsonObject.DeviceId}}</p>
+    <p> Time: {{jsonObject.Timestamp}}</p>
+    <p> Pressure: {{jsonObject.Pressure}}</p>
+    <p> Altitude: {{jsonObject.Altitude}}</p>
     </li>
   </ul>
