--- a/StingApp/src/app/telemetry-data/telemetry-data.component.html
+++ b/StingApp/src/app/telemetry-data/telemetry-data.component.html
@@ -1,25 +1,29 @@
 <div class="container">
 <h1>Your monitored objects</h1>   
   <div class="container">
-
-    
-      
-      <div *ngFor="let b of bData$">
-        <div class="row">
-          <div class="col">
-            <div id="image">
-              <img [src]="b.link" alt="image" routerLink="building/{{b.id}}" width=500px height=250px />
-            </div>
-            <a id="bottom-left" routerLink="building/{{b.id}}"><strong>{{ b.name }}</strong></a> 
-          </div>           
-        
-    
-      
-          <div class="col">            
-            wow
+    <div class="row">
+      <div class="col text-center">      
+        <div *ngFor="let b of bData$">      
+          <div class="canvas-wrapper">
+            <a routerLink="building/{{b.id}}" class="canvas">
+              <div class="canvas_border">
+                <svg>
+                  <defs><linearGradient id="grad-orange" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:rgb(253,137,68);stop-opacity:1"></stop><stop offset="100%" style="stop-color:rgb(153,75,23);stop-opacity:1"></stop></linearGradient><linearGradient id="grad-red" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" stop-color="#D34F48"></stop><stop offset="100%" stop-color="#772522"></stop></linearGradient></defs>
+                  <rect id="rect-grad" class="rect-gradient" fill="none" stroke="url(#grad-orange)" stroke-linecap="square" stroke-width="4" stroke-miterlimit="30" width="100%" height="100%"></rect>
+                </svg>
+              </div>
+              <div class="canvas_img-wrapper">
+                <img class="canvas_img" [src]="b.link" alt="image">
+              </div>
+              <div class="canvas_copy canvas_copy--left">
+                <span class="canvas_copy_subtitle"></span>
+                <strong class="canvas_copy_title">{{b.name}}</strong>                    
+                <span class="canvas_copy_details">{{b.city}}</span>
+              </div>
+            </a> 
           </div>
         </div>
       </div>
-
+    </div>
   </div>
 </div>
