mobile first changes

--- a/StingApp/src/app/floor/floor.component.html
+++ b/StingApp/src/app/floor/floor.component.html
@@ -1,5 +1,5 @@
 <div id="container">
-  <img id="image" [src]="floor$.link" alt="image" width=2000px height=1500px/>
+  <img id="image" [src]="floor$.link" class="img-fluid" alt="image" />
   <div id="txt1"> 
     <p> 
       Temperature: {{ jsonObject.Temperature }} <br/> 
