--- a/StingApp/src/styles.scss
+++ b/StingApp/src/styles.scss
@@ -6,3 +6,16 @@
 .bg-grey{
     background-color: #e6ebef;
 }
+
+h1{
+    padding-top: 2%;
+}
+
+.object{
+    padding: 2%;
+}
+
+.description{
+    padding-top: .5%;
+    font-size: 22px;    
+}
