--- a/StingApp/src/app/floor/floor.component.scss
+++ b/StingApp/src/app/floor/floor.component.scss
@@ -1,33 +1,45 @@
-#container {
-    position: relative;
-}
-
-#image {
-    width: 1100px;
-    height: 550px;
-    border: 1px solid black;
-}
-
 p {
-    color: red;
-    font-size: 12px;
+    color: rgb(241, 162, 14);
     font-family: monospace;
 }
 
-#txt2 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
+.main-content {
+	padding: 5% 0%;
+	margin: 0 auto;
+	max-width: 960px;
 }
 
-#txt3 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
+#image {
+	margin: 0 auto;
+	position: relative;
 }
 
-#txt4 {
-    position: absolute;
-    top: 0px;
-    left: 0px;
+#image a {
+	display: inline-block;
 }
+
+#image img {
+	position: relative;
+	float: left;
+	width: 100%;
+}
+
+#image div {    
+  font-size: 12px;
+  position: absolute;
+  opacity: 0;
+  top: 0%;
+  left: 0%;
+}
+
+@media (max-width: 767.98px) {
+    #image div {    
+        font-size: 10px; 
+    }
+ }
+
+ @media (max-width: 575.98px) { 
+    #image div {    
+        font-size: 8px; 
+    }
+ }
