--- a/StingApp/src/app/building/building.component.html
+++ b/StingApp/src/app/building/building.component.html
@@ -1,19 +1,15 @@
 <div class="flex-container bg-grey">
-<h1 class="text-center">Floors</h1>
- 
-  <div>
+<h1 class="text-center">Floors</h1>  
     <div class="object" *ngFor="let b of bData$">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
           <div id="image">
-            <img [src]="b.link" class="img-fluid rounded" alt="image" routerLink="floor/{{b.id}}"/>
+            <img [src]="b.link" class="img-fluid rounded floor-plan" alt="image" routerLink="floor/{{b.id}}"/>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 text-center description">
           <a routerLink="floor/{{b.id}}"><strong>Floor {{b.id}}</strong></a>
         </div>
-      </div>
-    </div>
+      </div>    
   </div>
-
 </div>
