Update telemetry data shown on rooms page

--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -1,7 +1,9 @@
 <h1><strong> Welcome to room {{ bData$["room-id"].valueOf() }}</strong></h1>
 
 <div id="content">
-  <p id="p1"> Temperature: {{ jsonObject.Temperature }} </p>
-  <p id="p2"> Humidity: {{jsonObject.Humidity}} </p>
-  <p id="p3"> Pressure: {{jsonObject.Pressure}} </p>
+  <p id="card1"></p>
+  <p id="card2"></p>
+  <p id="card3"></p>
+  <p id="card4"></p>
+  <p id="card5"></p>
 </div>
