--- a/StingApp/src/app/building/building.component.html
+++ b/StingApp/src/app/building/building.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
           <div id="image">
-            <img [src]="b.link" class="img-fluid rounded floor-plan" alt="image" routerLink="floor/{{b.id}}"/>
+            <img [src]="b.link" class="img-fluid rounded floor-plan img-link" alt="image" routerLink="floor/{{b.id}}"/>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 text-center description">
