--- a/StingApp/src/app/telemetry-data/telemetry-data.component.html
+++ b/StingApp/src/app/telemetry-data/telemetry-data.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12 text-center">
         <div id="image">
-          <img [src]="b.link" class="img-fluid rounded" alt="image" routerLink="building/{{b.id}}" />              
+          <img [src]="b.link" class="img-fluid rounded img-link" alt="image" routerLink="building/{{b.id}}" />              
         </div>
       </div>   
       <div class="col-md-12 col-sm-12 col-xs-12 text-center description">      
