Update card layout on room page, center components

--- a/StingApp/src/app/floor/floor.component.html
+++ b/StingApp/src/app/floor/floor.component.html
@@ -2,17 +2,14 @@
   <div id="container">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12 main-content">
-
         <section id="image">
           <a>
-            <img [src]="floor$.link" class="rounded" alt="floor-plan" />
-          
-            <div id="txt1" routerLink="room/1"> </div>
-            <div id="txt2" routerLink="room/2"> </div>
-            <div id="txt3" routerLink="room/3"> </div>
-            <div id="txt4" routerLink="room/4"> </div>
-          </a>
-        
+            <img [src]="floor$.link" class="rounded" alt="floor-plan" />          
+            <div id="txt1" class="img-link" routerLink="room/1"> </div>
+            <div id="txt2" class="img-link" routerLink="room/2"> </div>
+            <div id="txt3" class="img-link" routerLink="room/3"> </div>
+            <div id="txt4" class="img-link" routerLink="room/4"> </div>
+          </a>        
         </section>
       </div>
     </div>
