--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -1,8 +1,8 @@
 <div class="flex-container bg-grey">
-  <h1 class="text-center"><strong>Welcome to room {{ bData$["room-id"].valueOf() }}</strong></h1>
+  <h1 class="text-center">Welcome to room {{ bData$["room-id"].valueOf() }}</h1>
     <div class="container">
-      <div class="row text-center">
-        <div class="col-md-4 col-sm-4 col-xs-4">
+      <div class="row text-center justify-content-center">
+        <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
                 <h5 class="card-title">Temperature</h5>
@@ -11,7 +11,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-4">
+        <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
                 <h5 class="card-title">Humidity</h5>
@@ -20,7 +20,7 @@
             </div>
           </div>          
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-4">
+        <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
                 <h5 class="card-title">Air Pressure</h5>
@@ -28,10 +28,8 @@
                 <p class="card-text"><span id="PressVal"></span></p>                
             </div>
           </div>          
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-md-6 col-sm-6 col-xs-6">
+        </div>          
+        <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
                 <h5 class="card-title">Altitude</h5>
@@ -40,7 +38,7 @@
             </div>
           </div>          
         </div>
-        <div class="col-md-6 col-sm-6 col-xs-6">
+        <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
                 <h5 class="card-title">Device Id</h5>
@@ -48,7 +46,7 @@
                 <p class="card-text"><span id="DeviceVal"></span></p>                
             </div>
           </div>               
-        </div>
-      </div>
+        </div>  
+      </div>      
     </div>
 </div>
