Add icons for the measurement cards

--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -5,6 +5,7 @@
         <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
+                <img src="../../assets/images/temperature.png">
                 <h5 class="card-title">Temperature</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
                 <p class="card-text"><span id="TempVal"></span></p>                
@@ -14,6 +15,7 @@
         <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
+                <img src="../../assets/images/humidity.png">
                 <h5 class="card-title">Humidity</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
                 <p class="card-text"><span id="HumVal"></span></p>                
@@ -23,6 +25,7 @@
         <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
+                <img src="../../assets/images/airPressure.png">
                 <h5 class="card-title">Air Pressure</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
                 <p class="card-text"><span id="PressVal"></span></p>                
@@ -32,6 +35,7 @@
         <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
+                <img src="../../assets/images/altitude.png">
                 <h5 class="card-title">Altitude</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
                 <p class="card-text"><span id="AltVal"></span></p>                
@@ -41,6 +45,7 @@
         <div class="col-xl-4 col-md-6">
           <div class="card" style="width: 18rem;">                      
             <div class="card-body">
+                <img src="../../assets/images/device.png">
                 <h5 class="card-title">Device Id</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
                 <p class="card-text"><span id="DeviceVal"></span></p>                
