Only display status if room is configured

--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -8,7 +8,7 @@
                 <img src="../../assets/images/temperature.png">
                 <h5 class="card-title">Temperature</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
-                <p class="card-text"><span id="TempVal"></span></p>                
+                <p class="card-text"><span id="TempVal">No data provided</span></p>                
             </div>
           </div>
         </div>
@@ -18,7 +18,7 @@
                 <img src="../../assets/images/humidity.png">
                 <h5 class="card-title">Humidity</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
-                <p class="card-text"><span id="HumVal"></span></p>                
+                <p class="card-text"><span id="HumVal">No data provided</span></p>                
             </div>
           </div>          
         </div>
@@ -28,7 +28,7 @@
                 <img src="../../assets/images/airPressure.png">
                 <h5 class="card-title">Air Pressure</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
-                <p class="card-text"><span id="PressVal"></span></p>                
+                <p class="card-text"><span id="PressVal">No data provided</span></p>                
             </div>
           </div>          
         </div>          
@@ -38,7 +38,7 @@
                 <img src="../../assets/images/altitude.png">
                 <h5 class="card-title">Altitude</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
-                <p class="card-text"><span id="AltVal"></span></p>                
+                <p class="card-text"><span id="AltVal">No data provided</span></p>                
             </div>
           </div>          
         </div>
@@ -48,7 +48,7 @@
                 <img src="../../assets/images/device.png">
                 <h5 class="card-title">Device Id</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
-                <p class="card-text"><span id="DeviceVal"></span></p>                
+                <p class="card-text"><span id="DeviceVal">No data provided</span></p>                
             </div>
           </div>               
         </div>  
