--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <img src="../../assets/images/temperature.png">
                 <h5 class="card-title">Temperature</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Within Thresholds</h6>
                 <p class="card-text"><span id="TempVal">No data provided</span></p>                
             </div>
           </div>
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <img src="../../assets/images/humidity.png">
                 <h5 class="card-title">Humidity</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Within Thresholds</h6>
                 <p class="card-text"><span id="HumVal">No data provided</span></p>                
             </div>
           </div>          
@@ -27,7 +27,7 @@
             <div class="card-body">
                 <img src="../../assets/images/airPressure.png">
                 <h5 class="card-title">Air Pressure</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Within Thresholds</h6>
                 <p class="card-text"><span id="PressVal">No data provided</span></p>                
             </div>
           </div>          
@@ -37,7 +37,7 @@
             <div class="card-body">
                 <img src="../../assets/images/altitude.png">
                 <h5 class="card-title">Altitude</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
+                <h6 class="card-subtitle mb-2 text-muted">above sea level</h6>
                 <p class="card-text"><span id="AltVal">No data provided</span></p>                
             </div>
           </div>          
@@ -47,7 +47,7 @@
             <div class="card-body">
                 <img src="../../assets/images/device.png">
                 <h5 class="card-title">Device Id</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Under Threshold</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Locate Device</h6>
                 <p class="card-text"><span id="DeviceVal">No data provided</span></p>                
             </div>
           </div>               
