--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -55,3 +55,14 @@
       </div>      
     </div>
 </div>
+
+<!-- Function to call the chart-->
+<div *ngIf="chart">
+  <canvas id="canvasTemp">{{chart}}</canvas>
+</div>
+<p>
+
+</p>
+<div *ngIf="chart">
+  <canvas id="canvasHum">{{chart}}</canvas>
+</div>
